# PotatoEngine

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: cmake.yml
App/: .gitignore  CMakeLists.txt  conanfile.py
App/cmake/: PotatoApp-config-debug.cmake  PotatoApp-config-relwithdebinfo.cmake  PotatoApp-config.cmake
App/include/PotatoApp/: PotatoApp.h
App/include/PotatoApp/Editor/: Editor.h
App/scripts/: clean_all.bat  clean_conan_packages.bat  clean_conan_packages.sh  clean_prj.bat  clean_prj.sh  gen_prj.bat  gen_prj.sh  install_dependencies.bat  make_debug.sh
App/source/: PotatoApp.cpp  main.cpp
App/source/Editor/: Editor.cpp
Engine/: CMakeLists.txt  conanfile.py
Engine/cmake/: PotatoEngineConfig.cmake.in  build_type.cmake
Engine/config/: defines.json
Engine/include/PotatoEngine/: Export.h  export.hpp
Engine/include/PotatoEngine/Collections/: SortedVector.h
Engine/include/PotatoEngine/Core/: Application.h  Engine.h  Plugin.h
Engine/include/PotatoEngine/File/: File.h  FileSystem.h
Engine/include/PotatoEngine/Util/: Assert.h  Macros.h
Engine/scripts/: clean_all.bat  clean_all.sh  clean_conan_packages.bat  clean_conan_packages.sh  clean_prj.bat  gen_prj.bat  gen_prj.sh  make_debug.bat  make_release.bat  make_release.sh  make_release_with_debug_info.bat  make_release_with_debug_info.sh
Engine/source/Core/: Application.cpp  Engine.cpp  Plugin.cpp
Engine/source/Util/: Assert.cpp
cmake/: json_parser.cmake
include/PotatoEngine/Core/: Engine.h  Plugin.h
include/PotatoEngine/Util/: Assert.h  Macros.h
scripts/: build_debug.bat  build_release.bat  build_release_with_debug_info.bat  clean.bat  clean.sh  clean_conan_packages.bat  clean_prj.bat  gen_make_debug.bat  gen_prj.bat  gen_prj_release.sh  gen_prjs.bat  install_conan.bat  install_conan.sh  install_dependencies.sh  make_release.sh
source/: main.cpp
